# ai-traffic-light

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  windows-release.yml
hooks/: status_writer.ps1  status_writer.py
scripts/: simulate.py
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hooks.rs  lib.rs  main.rs  sessions.rs
